--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>DevFolio - Developer Portfolio Template</title>
+        <title>International healthcare Professionals</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -56,13 +56,13 @@
                         <div class="hero-content">
                             <div class="hero-text">
                                 <p>I'm</p>
-                                <h1>Kate Winslet</h1>
+                                <h1>Recruiting Zimbabwean Healthcare workers to work in the UK.</h1>
                                 <h2></h2>
                                 <div class="typed-text">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
                             </div>
                             <div class="hero-btn">
-                                <a class="btn" href="">Hire Me</a>
-                                <a class="btn" href="">Contact Me</a>
+                                <a class="btn" href="">Login</a>
+                                <a class="btn" href="">Register</a>
                             </div>
                         </div>
                     </div>
