--- a/index.html
+++ b/index.html
@@ -83,47 +83,52 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="img/about.jpg" alt="Image">
+                            <img src="img/about.png" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="about-content">
                             <div class="section-header text-left">
-                                <p>Learn About Me</p>
-                                <h2>10 Years Experience</h2>
+                                <p>We will take care of the hassle</p>
+                                <h2>About Us</h2>
                             </div>
                             <div class="about-text">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
+                                  We are a specialist healthcare agency bringing qualified nurses and healthcare workers into NHS and private health organisations in the UK. 
+
+                                  Why choose us:
+                                  We take care of visa applications, vetting and relocation support.
+                                  
+                                  We have the tools, resources, and strong international relationships to get your vacancies filled quickly, with qualified applicant.
                                 </p>
                             </div>
                             <div class="skills">
                                 <div class="skill-name">
-                                    <p>Web Design</p><p>85%</p>
+                                    <p>Visa Application</p><p></p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Web Development</p><p>95%</p>
+                                    <p>Relocation Support</p><p></p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Apps Design</p><p>90%</p>
+                                    <p>Accomodation</p><p></p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Apps Development</p><p>85%</p>
+                                    <p>Employment</p><p></p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
-                            <a class="btn" href="">Learn More</a>
+                            <a class="btn" href="">Register</a>
                         </div>
                     </div>
                 </div>
